--- a/main.css
+++ b/main.css
@@ -6,3 +6,22 @@ body {
     margin: 0;
     padding: 20px;
 }
+
+footer {
+    background-color: #1c3ab2;
+    color: #fff;
+    text-align: center;
+    padding: 10px 0;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+}
+
+header {
+    background-color: #1c3ab2;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    margin: 0;  
+    
+}
